--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch backend/server.js",
-    "frontend": "cd frontend && npm run dev"
+    "start": "node --watch server.js"
   },
   "author": "Bibhushit Regmi",
-  "license": "MIT",  "dependencies": {
+  "license": "MIT",
+  "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
