--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node --watch server.js"
+    "start": "cd backend && node --watch server.js"
   },
   "author": "Bibhushit Regmi",
   "license": "MIT",
